--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser-dynamic": "2.0.1",
     "@angular/platform-server": "2.0.1",
     "rxjs": "5.0.0-beta.12",
+    "tslib": "^1.10.0",
     "typescript": "2.0.3",
     "zone.js": "0.6.25"
   }
