--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler": "2.0.1",
     "@angular/compiler-cli": "0.6.3",
     "@angular/core": "2.0.1",
+    "@angular/animations": "^9.0.4",
     "@angular/platform-browser": "2.0.1",
     "@angular/platform-browser-dynamic": "2.0.1",
     "@angular/platform-server": "2.0.1",
