--- a/package.json
+++ b/package.json
@@ -25,20 +25,21 @@
   },
   "homepage": "https://github.com/wulfsolter/angular2-signaturepad#readme",
   "dependencies": {
+    "@angular-devkit/schematics": "^9.0.4",
     "signature_pad": "2.3.2"
   },
   "devDependencies": {
-    "@angular/common": "2.0.1",
-    "@angular/compiler": "2.0.1",
-    "@angular/compiler-cli": "0.6.3",
-    "@angular/core": "2.0.1",
+    "@angular/common": "9.0.4",
+    "@angular/compiler": "9.0.4",
+    "@angular/compiler-cli": "9.0.4",
+    "@angular/core": "9.0.4",
     "@angular/animations": "^9.0.4",
-    "@angular/platform-browser": "2.0.1",
-    "@angular/platform-browser-dynamic": "2.0.1",
-    "@angular/platform-server": "2.0.1",
-    "rxjs": "5.0.0-beta.12",
-    "tslib": "^1.10.0",
-    "typescript": "2.0.3",
-    "zone.js": "0.6.25"
+    "@angular/platform-browser": "9.0.4",
+    "@angular/platform-browser-dynamic": "9.0.4",
+    "@angular/platform-server": "9.0.4",
+    "rxjs": "6.5.4",
+    "tslib": "^1.11.1",
+    "typescript": "3.7.5",
+    "zone.js": "0.10.2"
   }
 }
